--- a/src/style.css
+++ b/src/style.css
@@ -12197,3 +12197,15 @@ margin: 0;
 -webkit-scrollbar-thumb:hover{
 
 }
+
+@media (max-width: 768px) {
+  .NavFiltre {
+    right: 0;
+    z-index: 1;
+    width: 100%;
+    height: auto;
+    position: relative;
+    top:  0px;
+  }
+}
+
